cmake_minimum_required(VERSION 3.16)

project(
  learnopengl
  VERSION 0.1
  LANGUAGES C CXX
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

add_subdirectory(vendor)

file(GLOB SRC_DIRS RELATIVE "${CMAKE_SOURCE_DIR}/src" "${CMAKE_SOURCE_DIR}/src/*")

foreach(SRC_DIR ${SRC_DIRS})
  if (IS_DIRECTORY "${CMAKE_SOURCE_DIR}/src/${SRC_DIR}")
    add_subdirectory("src/${SRC_DIR}")
  endif()
endforeach()


